global link update after website restructuring

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -29,18 +29,18 @@ SSJS is an XX-century version of JavaScript paired with proprietary libraries cr
 
 #### SSJS Documentation
 
-- [If & Switch](./ssjs/ssjs-if-and-switch.mdx)
-- [Loops](./ssjs/ssjs-loops.mdx)
-- [Debugging](./ssjs/debugging-ssjs.mdx)
-- [Style Guide](./ssjs/ssjs-style-guide.mdx)
-- [Performance](./ssjs/ssjs-vs-ampscript-performance.mdx)
+- [If & Switch](/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-if-and-switch.mdx)
+- [Loops](/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-loops.mdx)
+- [Debugging](/docs/salesforce/marketing-cloud-engagement/ssjs/debugging-ssjs.mdx)
+- [Style Guide](/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-style-guide.mdx)
+- [Performance](/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-vs-ampscript-performance.mdx)
 
 #### SSJS Snippets
 
-- [AMPScript in SSJS](./ssjs/snippets/ampscript-in-ssjs.mdx)
-- [MobileConnect Phone Change](./ssjs/snippets/ssjs-mobileconnect-phone-change.mdx)
-- [SSJS Script Template](./ssjs/snippets/ssjs-script-template.mdx)
-- [Solve with Cloud Page Apps](./ssjs/snippets/sfmc-cloud-page-apps.mdx)
+- [AMPScript in SSJS](/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/ampscript-in-ssjs.mdx)
+- [MobileConnect Phone Change](/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/ssjs-mobileconnect-phone-change.mdx)
+- [SSJS Script Template](/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/ssjs-script-template.mdx)
+- [Solve with Cloud Page Apps](/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/sfmc-cloud-page-apps.mdx)
 
 <Button
     link='./category/ssjs/'
@@ -53,15 +53,14 @@ In this part, I am gathering selected elements of modern vanilla JavaScript that
 
 #### JS Documentation
 
-- [If & Switch](./js/js-if-and-switch.mdx)
-- [Loops](./js/js-loops.mdx)
-- [Document Object Model (DOM)](./js/js-dom.mdx)
+- [If & Switch](/docs/js/js-if-and-switch.mdx)
+- [Loops](/docs/js/js-loops.mdx)
+- [Document Object Model (DOM)](/docs/js/js-dom.mdx)
 
 #### JS Snippets
 
-- [Tailor with Data](./js/snippets/tailor-with-data.mdx)
-- [Engage with Countdown](./js/snippets/engage-with-countdown.mdx)
-- [Export, Import & Document Roles in Salesforce Marketing Cloud](./js/snippets/export-import-document-sfmc-roles.mdx)
+- [Tailor with Data](/docs/js/snippets/tailor-with-data.mdx)
+- [Engage with Countdown](/docs/js/snippets/engage-with-countdown.mdx)
 
 <Button
     link='./category/javascript/'
@@ -74,12 +73,12 @@ AMPScript is a proprietary scripting language in Salesforce Marketing Cloud alon
 
 #### AMPScript Documentation
 
-- [Style Guide](./ampscript/ampscript-style-guide.mdx)
-- [Performance](./ssjs/ssjs-vs-ampscript-performance.mdx)
+- [Style Guide](/docs/salesforce/marketing-cloud-engagement/ampscript/ampscript-style-guide.mdx)
+- [Performance](/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-vs-ampscript-performance.mdx)
 
 #### AMPScript Snippets
 
-- [AMPScript in SSJS](./ssjs/snippets/ampscript-in-ssjs.mdx)
+- [AMPScript in SSJS](/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/ampscript-in-ssjs.mdx)
 
 <Button
     link='./category/ampscript/'
@@ -92,25 +91,25 @@ To fully leverage the Salesforce Marketing Cloud Data Extensions and Automation 
 
 #### SQL Documentation
 
-- [SQL Basics](./sql/sfmc-sql-basics.mdx)
-- [Select](./sql/sfmc-sql-select.mdx)
-- [From](./sql/sfmc-sql-from.mdx)
-- [Join](./sql/sfmc-sql-join.mdx)
-- [Where](./sql/sfmc-sql-where.mdx)
-- [Case](./sql/sfmc-sql-case.mdx)
-- [Like](./sql/sfmc-sql-like.mdx)
-- [String Functions](./sql/sfmc-sql-string-functions.mdx)
-- [Date Functions](./sql/sfmc-sql-date-functions.mdx)
-- [Numeric Functions](./sql/sfmc-sql-numeric-functions.mdx)
-- [Conversion Functions](./sql/sfmc-sql-conversion-functions.mdx)
-- [Aggregate Functions](./sql/sfmc-sql-aggregate-functions.mdx)
-- [NULL Functions](./sql/sfmc-sql-null-functions.mdx)
-- [Style Guide](./sql/sfmc-sql-style-guide.mdx)
+- [SQL Basics](/docs/salesforce/marketing-cloud-engagement/sql/sql-basics.mdx)
+- [Select](/docs/salesforce/marketing-cloud-engagement/sql/sql-select.mdx)
+- [From](/docs/salesforce/marketing-cloud-engagement/sql/sql-from.mdx)
+- [Join](/docs/salesforce/marketing-cloud-engagement/sql/sql-join.mdx)
+- [Where](/docs/salesforce/marketing-cloud-engagement/sql/sql-where.mdx)
+- [Case](/docs/salesforce/marketing-cloud-engagement/sql/sql-case.mdx)
+- [Like](/docs/salesforce/marketing-cloud-engagement/sql/sql-like.mdx)
+- [String Functions](/docs/salesforce/marketing-cloud-engagement/sql/sql-string-functions.mdx)
+- [Date Functions](/docs/salesforce/marketing-cloud-engagement/sql/sql-date-functions.mdx)
+- [Numeric Functions](/docs/salesforce/marketing-cloud-engagement/sql/sql-numeric-functions.mdx)
+- [Conversion Functions](/docs/salesforce/marketing-cloud-engagement/sql/sql-conversion-functions.mdx)
+- [Aggregate Functions](/docs/salesforce/marketing-cloud-engagement/sql/sql-aggregate-functions.mdx)
+- [NULL Functions](/docs/salesforce/marketing-cloud-engagement/sql/sql-null-functions.mdx)
+- [Style Guide](/docs/salesforce/marketing-cloud-engagement/sql/sql-style-guide.mdx)
 
 #### SQL Snippets
 
-- [Debugging Email Sends](./sql/snippets/sfmc-sql-debugging-email-sends.mdx)
-- [Debugging Value Length](./sql/snippets/sfmc-sql-debugging-value-length.mdx)
+- [Debugging Email Sends](/docs/salesforce/marketing-cloud-engagement/sql/snippets/sql-debugging-email-sends.mdx)
+- [Debugging Value Length](/docs/salesforce/marketing-cloud-engagement/sql/snippets/sql-debugging-value-length.mdx)
 
 <Button
     link='./category/sfmc-sql/'
@@ -121,16 +120,17 @@ To fully leverage the Salesforce Marketing Cloud Data Extensions and Automation 
 
 Many things in Salesforce Marketing Cloud aren't coding but have a massive impact on the code. Permissions. System Data Views. Configuration options. Here I focus on the most important ones that are crucial for Marketing Cloud developers.
 
-{/* - [Licence Limits](./config/sfmc-licence-limits.mdx) */}
-- [System Data Views](./config/sfmc-system-data-views.mdx)
-- [Mobile Connect Data Views](./config/sfmc-mobile-connect-data-views.mdx)
-- [MCC Integration Patterns](./config/sfmc-mcc-integration-patterns.mdx)
-- [Contact Deletion Process](./config/sfmc-contact-deletion.mdx)
-- [Enhanced Send Log](./config/sfmc-enhanced-send-log.mdx)
-- [Behavioral Triggers](./config/sfmc-behavioral-triggers.mdx)
-- [Power of Code Resources](./config/sfmc-code-resource.mdx)
-- [AppExchange Solutions](./config/sfmc-appexchange-solutions.mdx)
-- [Features On Demand](./config/sfmc-features-on-demand.mdx)
+{/* - [Licence Limits](/docs/salesforce/marketing-cloud-engagement/config/licence-limits.mdx) */}
+- [System Data Views](/docs/salesforce/marketing-cloud-engagement/config/system-data-views.mdx)
+- [Mobile Connect Data Views](/docs/salesforce/marketing-cloud-engagement/config/mobile-connect-data-views.mdx)
+- [MCC Integration Patterns](/docs/salesforce/marketing-cloud-engagement/config/mcc-integration-patterns.mdx)
+- [Contact Deletion Process](/docs/salesforce/marketing-cloud-engagement/config/contact-deletion.mdx)
+- [Enhanced Send Log](/docs/salesforce/marketing-cloud-engagement/config/enhanced-send-log.mdx)
+- [Behavioral Triggers](/docs/salesforce/marketing-cloud-engagement/config/behavioral-triggers.mdx)
+- [Power of Code Resources](/docs/salesforce/marketing-cloud-engagement/config/code-resource.mdx)
+- [AppExchange Solutions](/docs/salesforce/marketing-cloud-engagement/config/appexchange-solutions.mdx)
+- [Features On Demand](/docs/salesforce/marketing-cloud-engagement/config/features-on-demand.mdx)
+- [Export, Import & Document Roles in Salesforce Marketing Cloud](/docs/salesforce/marketing-cloud-engagement/config/export-import-document-sfmc-roles.mdx)
 
 <Button
     link='./category/sfmc-config/'
@@ -143,15 +143,15 @@ Salesforce Marketing Cloud Personalization (Interaction Studio) is a cross-chann
 
 ### MC Personalization Documentation
 
-- [Catalog Objects Architeture](./interaction-studio/mcp-catalog-architecture.mdx)
-- [Open Time Email Template](./interaction-studio/mcp-open-time-email.mdx)
-- [Serverside Code Basics](./interaction-studio/mcp-serverside-code-basics.mdx)
-- [Serverside Code Properties](./interaction-studio/mcp-serverside-code-properties.mdx)
-- [Serverside Code Context](./interaction-studio/mcp-serverside-code-context.mdx)
+- [Catalog Objects Architeture](/docs/salesforce/marketing-cloud-personalization/catalog-architecture.mdx)
+- [Open Time Email Template](/docs/salesforce/marketing-cloud-personalization/open-time-email.mdx)
+- [Serverside Code Basics](/docs/salesforce/marketing-cloud-personalization/serverside-code-basics.mdx)
+- [Serverside Code Properties](/docs/salesforce/marketing-cloud-personalization/serverside-code-properties.mdx)
+- [Serverside Code Context](/docs/salesforce/marketing-cloud-personalization/serverside-code-context.mdx)
 
 ### MC Personalization Snippets
 
-- [Catalog ETL Metadata Viewer](./interaction-studio/snippets/mcp-catalog-etl-metadata-viewer.mdx)
+- [Catalog ETL Metadata Viewer](/docs/salesforce/marketing-cloud-personalization/snippets/catalog-etl-metadata-viewer.mdx)
 
 <Button
     link='./category/mc-personalization/'
