--- a/docs/salesforce/marketing-cloud-engagement/ampscript/ampscript-style-guide.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/ampscript/ampscript-style-guide.mdx
@@ -71,7 +71,7 @@ I use `camelCase` for AMPScript variables because:
 
 1. It is more readable than `lowercase` or `UPPERCASE` - especially for longer names.
 2. It is easier to differentiate variable name (`@` prefix and `camelCase`) from the function name (`PascalCase`), even if they use the same word (frequent for technical variables like counters).
-3. It is in line with the [SSJS styling for variables](../ssjs/ssjs-style-guide.mdx#js-variables-functions--methods-letter-case), so it's easier to switch between languages.
+3. It is in line with the [SSJS styling for variables](/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-style-guide.mdx#js-variables-functions--methods-letter-case), so it's easier to switch between languages.
 
 ```js
 /* ✅ camelCase variable names */
@@ -98,7 +98,7 @@ I use `PascalCase` for AMPScript functions because:
 
 1. It is more readable than `lowercase` or `UPPERCASE` - especially for longer names.
 2. It is easier to differentiate function name (`PascalCase`) from the variable name (`@` prefix and `camelCase`), even if they use the same word (frequent for technical variables like counters).
-3. It is in line with the [SSJS styling for built-in functions](../ssjs/ssjs-style-guide.mdx#ssjs-functions-letter-case), so it's easier to switch between languages.
+3. It is in line with the [SSJS styling for built-in functions](/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-style-guide.mdx#ssjs-functions-letter-case), so it's easier to switch between languages.
 
 ```js
 /* ✅ PascalCase variable names */
@@ -355,5 +355,5 @@ If you want to share something I'm missing or have arguments for a different rec
 
 Looking for more Marketing Cloud style? Check out my:
 
-- [SFMC SSJS Style Guide](../ssjs/ssjs-style-guide.mdx)
-- [SFMC SQL Style Guide](../sql/sfmc-sql-style-guide.mdx)
+- [SFMC SSJS Style Guide](/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-style-guide.mdx)
+- [SFMC SQL Style Guide](/docs/salesforce/marketing-cloud-engagement/sql/sql-style-guide.mdx)
