--- a/docs/salesforce/marketing-cloud-engagement/config/export-import-document-sfmc-roles.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/export-import-document-sfmc-roles.mdx
@@ -24,7 +24,7 @@ On top of that, standard Roles are silently changing from release to release as 
 
 Marketing Cloud doesn't make it easy. There is no option to clone existing Roles to serve as a starting point for a new custom one. There is no option to export and import them between SFMC accounts. There is no option to create good documentation on them (unless you have a kink for super long print screens).
 
-Here comes JavaScript and [Document Object Model (DOM)](../js-dom.mdx) to unlock all those scenarios.
+Here comes JavaScript and [Document Object Model (DOM)](/docs/js/js-dom.mdx) to unlock all those scenarios.
 
 Fear not - you don't have to be a developer to leverage it. I will describe everything step-by-step and share ready-to-use snippets with you. Let's dive in.
 
@@ -44,7 +44,7 @@ You can check the outcome by going to Setup > Users > Users > clicking checkbox 
 
 ## Where the magic happens
 
-To start using those SFMC Role-related, [DOM](../js-dom.mdx)-fueled solutions:
+To start using those SFMC Role-related, [DOM](/docs/js/js-dom.mdx)-fueled solutions:
 
 1. Go to Marketing Cloud Setup » Users » Roles.
 2. Click on the name of the Role you want to work with.
@@ -83,7 +83,7 @@ console.log(JSON.stringify(permissionsExport));
 
 Click enter to run it.
 
-It will [loop](../js-loops.mdx) through all the checkboxes that you can see next to the permissions, save them in a single JavaScript object and output them to the Console. Yeah, it looks awful, but that's all you need - list of checkboxes along with their status.
+It will [loop](/docs/js/js-loops.mdx) through all the checkboxes that you can see next to the permissions, save them in a single JavaScript object and output them to the Console. Yeah, it looks awful, but that's all you need - list of checkboxes along with their status.
 
 Save this long text (either by highlighting and copy-pasting or by right-clicking in an empty space within the Console row and clicking `Copy Selected`). It should start with `{` and end with `}`.
 
@@ -102,7 +102,7 @@ for (const [permissionId, permissionStatus] of Object.entries(permissionsImport)
 
 Change the `{}` in the first line with the export text you saved and click enter to run it.
 
-It will [loop](../js-loops.mdx) through all the saved checkboxes and update their state to the one from your export. If some new checkboxes don't exist in the export (for example, you did your export before Marketing Cloud Release that added some new permissions), those new ones will stay unchanged.
+It will [loop](/docs/js/js-loops.mdx) through all the saved checkboxes and update their state to the one from your export. If some new checkboxes don't exist in the export (for example, you did your export before Marketing Cloud Release that added some new permissions), those new ones will stay unchanged.
 
 That's it. You cloned a Role.
 
@@ -151,7 +151,7 @@ console.log(csv);
 
 Click enter to run it.
 
-It will [loop](../js-loops.mdx) through all the checkboxes that you can see next to the permissions and:
+It will [loop](/docs/js/js-loops.mdx) through all the checkboxes that you can see next to the permissions and:
 
 - Save the permission name (for example, `View All Contacts`).
 - Prefix it with all the parent permissions to get a full path (for example, `Contacts - Contact Builder - View All Contacts`).
@@ -166,7 +166,7 @@ Add the Name of the Role and its purpose stored in the Description field, and th
 
 ## Backup of Standard Roles
 
-As the default System Roles permissions in Salesforce Marketing Cloud can be edited freely and [currently there is no easy way to revert those changes](../../../../sites/ideas/marketing-cloud-ideas/#restore-default-permissions-for-sfmc-standard-system-roles), I created a backup repository for you with all out-of-the-box configurations.
+As the default System Roles permissions in Salesforce Marketing Cloud can be edited freely and [currently there is no easy way to revert those changes](/sites/ideas/marketing-cloud-ideas/#restore-default-permissions-for-sfmc-standard-system-roles), I created a backup repository for you with all out-of-the-box configurations.
 
 <Button
  link='https://github.com/MateuszDabrowski/sfmc-roles-backup'
