--- a/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-salesforce-data-in-journey-builder.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-salesforce-data-in-journey-builder.mdx
@@ -50,6 +50,6 @@ True | False | True | __Not added to SFMC__
 -- | --
 Recording | [YouTube](https://www.youtube.com/watch?v=Ru4Qh__3xdA&list=PL_o00w2Z5LYHVcq56BLpBfJHRAghLhHkI)
 Slides | [PDF](https://github.com/MateuszDabrowski/mateuszdabrowski.pl/blob/master/static/pdf/%5B2024-09%5D%20SF%20CRM%20in%20Journey%20Builder%20with%20MCC.pdf)
-Articles | [SFMC MCC Integration Patterns](../config/sfmc-mcc-integration-patterns.mdx) <br/> Tim Ziter on [Salesforce Data Entry](https://handsonsfmc.com/how-to-create-a-salesforce-data-entry-event/) <br/> Salesforce on [Salesforce Journey Builder Activities](https://help.salesforce.com/s/articleView?id=sf.mc_jb_sales_service_cloud_best_practices.htm&type=5) <br/> Rafał Wolsztyniak on [Data Bindings](https://sfmc.quest/data-binding-with-the-update-contact-activity/)
+Articles | [SFMC MCC Integration Patterns](/docs/salesforce/marketing-cloud-engagement/config/mcc-integration-patterns.mdx) <br/> Tim Ziter on [Salesforce Data Entry](https://handsonsfmc.com/how-to-create-a-salesforce-data-entry-event/) <br/> Salesforce on [Salesforce Journey Builder Activities](https://help.salesforce.com/s/articleView?id=sf.mc_jb_sales_service_cloud_best_practices.htm&type=5) <br/> Rafał Wolsztyniak on [Data Bindings](https://sfmc.quest/data-binding-with-the-update-contact-activity/)
 
 
