--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-where.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-where.mdx
@@ -11,7 +11,7 @@ import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content='Use WHERE to make your query lean and to the point. Less is more.' />
 
-With just [`SELECT`](./sfmc-sql-select.mdx) and [`FROM`](./sfmc-sql-from.mdx) statements, you can already start building your queries. With the addition of [`JOIN`](./sfmc-sql-join.mdx), you can do much more than in the Salesforce Marketing Cloud UI. `WHERE` grants you even more power by allowing you to filter your queries' outcomes.
+With just [`SELECT`](/docs/salesforce/marketing-cloud-engagement/sql/sql-select.mdx) and [`FROM`](/docs/salesforce/marketing-cloud-engagement/sql/sql-from.mdx) statements, you can already start building your queries. With the addition of [`JOIN`](/docs/salesforce/marketing-cloud-engagement/sql/sql-join.mdx), you can do much more than in the Salesforce Marketing Cloud UI. `WHERE` grants you even more power by allowing you to filter your queries' outcomes.
 
 The concept behind it is straightforward. It takes all the results you obtained with the query above the `WHERE`, and for each, it applies one or more conditions. If they evaluate to `TRUE` - this particular result will be available in the output Data Extension. If evaluation ends with `FALSE`, `WHERE` will filter it out.
 
@@ -25,7 +25,7 @@ WHERE Domain = 'mateuszdabrowski.pl'
 
 :::note You Should Know
 
-`WHERE` statement is heavily impacted by [`NULL`](./sfmc-sql-null-functions.mdx) values - be sure to check [dedicated guide](./sfmc-sql-null-functions.mdx) on how to solve those issues.
+`WHERE` statement is heavily impacted by [`NULL`](/docs/salesforce/marketing-cloud-engagement/sql/sql-null-functions.mdx) values - be sure to check [dedicated guide](/docs/salesforce/marketing-cloud-engagement/sql/sql-null-functions.mdx) on how to solve those issues.
 
 :::
 
@@ -66,11 +66,11 @@ FROM _Subscribers
 WHERE CONVERT(DATE, DateJoined) >= DATEADD(MONTH, -1, CONVERT(DATE, GETUTCDATE()))
 ```
 
-With dates, you will frequently want to use a bit more complex structure for the comparison to work correctly. In this case, we are converting the `DateJoined` value to a simple date (day, month, year without the time). We are also getting a current date in UTC format and converting it to a simple date. Next, we subtract one month and compare it to the `DateJoined` transformed value. I cover more such examples in the [SFMC SQL Date Functions](./sfmc-sql-date-functions.mdx).
+With dates, you will frequently want to use a bit more complex structure for the comparison to work correctly. In this case, we are converting the `DateJoined` value to a simple date (/docs/salesforce/marketing-cloud-engagement/sql/sql-date-functions.mdx).
 
 ## LIKE operator
 
-Another handy operator is `LIKE`. It allows you to leverage wildcards to search for matching records based on value fragment. You may know it from the [`SELECT` `CASE` statement](./sfmc-sql-case.mdx#like-in-case), but it is much more useful with `WHERE`. Think about filtering with just a part of the value (for example email domain in `EmailAddress` field) or with a single element within multi picklist (for instance finding one value within the comma-separated list of all purchased products).
+Another handy operator is `LIKE`. It allows you to leverage wildcards to search for matching records based on value fragment. You may know it from the [`SELECT` `CASE` statement](/docs/salesforce/marketing-cloud-engagement/sql/sql-case.mdx#like-in-case), but it is much more useful with `WHERE`. Think about filtering with just a part of the value (for example email domain in `EmailAddress` field) or with a single element within multi picklist (for instance finding one value within the comma-separated list of all purchased products).
 
 However, in the marketing automation world, the `LIKE` operator is handy for selecting contacts based on the multi-picklist columns. Consider `ActiveSubscriptions` field with any combination of values `Phone`, `TV`, or `Internet`.
 
@@ -84,7 +84,7 @@ FROM MasterSubscriberDE
 WHERE ActiveSubscription LIKE '%Phone%'
 ```
 
-It is also an excellent tool for database cleaning by finding incorrect values within automation. To learn more about the possibilities, check out the [`LIKE` guide](./sfmc-sql-like.mdx).
+It is also an excellent tool for database cleaning by finding incorrect values within automation. To learn more about the possibilities, check out the [`LIKE` guide](/docs/salesforce/marketing-cloud-engagement/sql/sql-like.mdx).
 
 ## Logical operators
 
@@ -188,7 +188,7 @@ WHERE EmailAddress NOT LIKE '%@mateuszdabrowski.pl'
 
 ## CASE operator
 
-The `CASE` statement is not only useful in a [`SELECT`](./sfmc-sql-select.mdx) part of the query. You can use it also within the `WHERE`. There are two approaches to do this.
+The `CASE` statement is not only useful in a [`SELECT`](/docs/salesforce/marketing-cloud-engagement/sql/sql-select.mdx) part of the query. You can use it also within the `WHERE`. There are two approaches to do this.
 
 The first compare `1` to the outcome of the `CASE` statement that evaluates each of its conditions to either `1` or `0`. If the comparison evaluates to `WHERE 1 = 1` it will resolve to `TRUE` and return the result.
 
@@ -210,7 +210,7 @@ It works, but you can write it better with other means mentioned above in most c
 
 :::note You Should Know
 
-You can do better even with the [search version of `CASE`](./sfmc-sql-case.mdx#search-version-of-case), as it allows you to use `AND`/`OR`/`IN` within the `CASE`:
+You can do better even with the [search version of `CASE`](/docs/salesforce/marketing-cloud-engagement/sql/sql-case.mdx#search-version-of-case), as it allows you to use `AND`/`OR`/`IN` within the `CASE`:
 
  ```sql {6-9} title="All subscribers NOT with unsubscribed, bounced or temporarily held status"
 SELECT
@@ -252,4 +252,4 @@ Always consider the order of the conditions in your `CASE` statement. It might l
 
 :::
 
-To learn more about the possibilities and [shorthands](./sfmc-sql-case.mdx#iif-shorthand), check out the [`CASE` guide](./sfmc-sql-case.mdx).
+To learn more about the possibilities and [shorthands](/docs/salesforce/marketing-cloud-engagement/sql/sql-case.mdx#iif-shorthand), check out the [`CASE` guide](/docs/salesforce/marketing-cloud-engagement/sql/sql-case.mdx).
