--- a/docs/salesforce/marketing-cloud-engagement/ssjs/debugging-ssjs.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/ssjs/debugging-ssjs.mdx
@@ -22,7 +22,7 @@ When you start working with programmatic languages in Salesforce Marketing Cloud
 Before diving deep into errors, let's talk about where to write the SSJS. The language is useful in many places within the Marketing Cloud ecosystem. Among else in:
 
 - Cloud Pages (Web Studio)
-- [Code Resources](../config/sfmc-code-resource.mdx) (Web Studio -> Content Builder)
+- [Code Resources](/docs/salesforce/marketing-cloud-engagement/config/code-resource.mdx) (Web Studio -> Content Builder)
 - Content Blocks (Content Builder)
 - Emails and other communication (Email Studio / Mobile Studio / Content Builder)
 - Script Activities (Automation Studio)
@@ -46,7 +46,7 @@ Whenever you are writing an SSJS script on the Cloud Page, be sure to check your
 
 ### JSON Code Resource
 
-When I want to go around those issues, I work in [JSON Code Resource](../config/sfmc-code-resource.mdx) (in the past stored in Web Studio, now in Content Builder). It generates a link you can use to check whether everything works, just like a Cloud Page. However, page views are free. There is also no preview allowing for a faster save-reload cycle.
+When I want to go around those issues, I work in [JSON Code Resource](/docs/salesforce/marketing-cloud-engagement/config/code-resource.mdx) (in the past stored in Web Studio, now in Content Builder). It generates a link you can use to check whether everything works, just like a Cloud Page. However, page views are free. There is also no preview allowing for a faster save-reload cycle.
 
 The cons? You won't be able to use any frontend (neither HTML nor JavaScript), which might be a deal-breaker in some scenarios.
 
