--- a/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-style-guide.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-style-guide.mdx
@@ -488,5 +488,5 @@ If you want to share something I'm missing or have arguments for a different rec
 
 Looking for more Marketing Cloud style? Check out my:
 
-- [AMPScript Style Guide](../ampscript/ampscript-style-guide.mdx)
-- [SFMC SQL Style Guide](../sql/sfmc-sql-style-guide.mdx)
+- [AMPScript Style Guide](/docs/salesforce/marketing-cloud-engagement/ampscript/ampscript-style-guide.mdx)
+- [SFMC SQL Style Guide](/docs/salesforce/marketing-cloud-engagement/sql/sql-style-guide.mdx)
