--- a/docs/salesforce/marketing-cloud-personalization/open-time-email.mdx
+++ b/docs/salesforce/marketing-cloud-personalization/open-time-email.mdx
@@ -221,7 +221,7 @@ Sometimes you need more than just a fallback for a `null` value. When it is not 
 </div>
 ```
 
-As you can see, for the `if` block you need to use HTML comment notation with `#if()` and `#end` statements. The `#if()` accepts parameters that return a boolean, just as in [JavaScript `if`](../js/js-if-and-switch.mdx).
+As you can see, for the `if` block you need to use HTML comment notation with `#if()` and `#end` statements. The `#if()` accepts parameters that return a boolean, just as in [JavaScript `if`](/docs/js/js-if-and-switch.mdx).
 
 :::note You Should Know
 
