--- a/docs/salesforce/marketing-cloud-personalization/serverside-code-basics.mdx
+++ b/docs/salesforce/marketing-cloud-personalization/serverside-code-basics.mdx
@@ -39,7 +39,7 @@ All the above things are done within the Serverside Code tab of the MC Personali
 
 :::note You Should Know
 
-Open Time Email Campaigns are using different, older system. I covered its details in a [separate guide](./mcp-open-time-email.mdx).
+Open Time Email Campaigns are using different, older system. I covered its details in a [separate guide](/docs/salesforce/marketing-cloud-personalization/open-time-email.mdx).
 
 :::
 
@@ -145,7 +145,7 @@ Keep this in mind when you have to provide a payload according to a specificatio
 
 :::
 
-With the basics of Serverside Code processing, you are ready to start coding. Next step - build MCP Campaign Template inputs with [Serverside Code Properties](../mcp-serverside-code-properties/).
+With the basics of Serverside Code processing, you are ready to start coding. Next step - build MCP Campaign Template inputs with [Serverside Code Properties](/docs/salesforce/marketing-cloud-personalization/serverside-code-properties/).
 
 ---
 
