--- a/docs/salesforce/marketing-cloud-engagement/config/code-resource.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/code-resource.mdx
@@ -110,7 +110,7 @@ Once Marketing Cloud executes SSJS and AMPScript on the backend, it removes that
 
 This trick enables many different use cases that make Code Resources shine:
 
-1. AMPScript and [SSJS debugging](../ssjs/debugging-ssjs.mdx) - there are many places where you might want to use SFMC programmatic languages. Most of them either doesn't allow for easy debugging or drive SuperMessages costs. Code Resources are free and allow you to output error descriptions.
+1. AMPScript and [SSJS debugging](/docs/salesforce/marketing-cloud-engagement/ssjs/debugging-ssjs.mdx) - there are many places where you might want to use SFMC programmatic languages. Most of them either doesn't allow for easy debugging or drive SuperMessages costs. Code Resources are free and allow you to output error descriptions.
 2. Deploying, cleaning and retrieving scripts - in many situations doing things through SFMC User Interface is not the best option. Deploying dozens of Data Extensions on multiple business units, cleaning hundreds of archival images or pulling assets JSON for version control. We can cover all those use cases with a script that can do the work in a fraction of the time needed for a manual approach. Then, some things cannot be done through UI at all (like targeting AutoSuppression List with Query Activity). Code Resource again will allow you to write, test and run such solutions. For free.
 3. Creating custom mini backends - that use case deserves a separate section ;)
 
@@ -285,7 +285,7 @@ If the request comes from Marketing Cloud controlled resource (Cloud Page, Email
 
 ### SSO
 
-Finally, if the Code Resource is part of your internal solution created only for Marketing Cloud users, you may leverage full-blown SSO to make it as secure as the whole platform. Read more on that approach in the [Cloud Page Apps article](../ssjs/snippets/sfmc-cloud-page-apps.mdx#a-good-application-is-a-secure-application).
+Finally, if the Code Resource is part of your internal solution created only for Marketing Cloud users, you may leverage full-blown SSO to make it as secure as the whole platform. Read more on that approach in the [Cloud Page Apps article](/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/sfmc-cloud-page-apps.mdx#a-good-application-is-a-secure-application).
 
 ## Examples
 
@@ -295,7 +295,7 @@ With the flexibility of Code Resources, the sky is the limit for compelling use 
 2. Run [SSJS within a Journey Activity](https://www.linkedin.com/pulse/ssjs-journey-builder-sascha-huwald/) by [Sascha Huwald](https://www.linkedin.com/in/sascha-huwald/).
 3. Create a [custom Chrome search engine that can find and directly open SFMC Data Extensions right from your URL bar](https://sfmr.dev/ideas/sfmc/tools/data-extension-search-engine) by [Michał Rzepka](https://www.linkedin.com/in/michalrzepka90/).
 4. Create [Data Extension Search Engine in your Slack](https://youtu.be/8gESkxxXJ7A) by [Cam Robert](https://www.linkedin.com/in/camrobert/).
-5. Build [Cloud Page Apps](../ssjs/snippets/sfmc-cloud-page-apps.mdx) to make your and your team lives easier.
+5. Build [Cloud Page Apps](/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/sfmc-cloud-page-apps.mdx) to make your and your team lives easier.
 
 Know other inspiring Code Resource use cases? Let me know!
 
@@ -303,5 +303,5 @@ Know other inspiring Code Resource use cases? Let me know!
 
 Looking for more? Check out follow up materials for added context and deeper dive:
 
-1. Webinar recording on [Architecting Web Solutions in SFMC](../webinars/sfmc-webinar-architecting-web-solutions.mdx).
-2. Webinar recording on [Cloud Page Apps](../webinars/sfmc-webinar-cloud-page-apps.mdx).
+1. Webinar recording on [Architecting Web Solutions in SFMC](/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-architecting-web-solutions.mdx).
+2. Webinar recording on [Cloud Page Apps](/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-cloud-page-apps.mdx).
