--- a/docs/salesforce/marketing-cloud-engagement/config/licence-limits.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/licence-limits.mdx
@@ -18,7 +18,7 @@ import { Button } from '/src/components/Buttons.js';
 
 Salesforce Marketing Cloud is an extremly flexibile platform. You can fulfill nearly any marketing dream using the available tools. But it also makes SFMC a complex platform with power that can be easily abused. Especially when best practices are not followed.
 
-That abuse can lead to outstanding solutions (like [Cloud Page Apps](../ssjs/snippets/sfmc-cloud-page-apps.mdx) or [custom processing backends](./sfmc-code-resource.mdx)) but it can also lead to huge performance issues that impact your Salesforce Marketing Cloud and a whole stack (like, for example, triggering hundreds of Filter Activities at the same time - please don’t do it).
+That abuse can lead to outstanding solutions (like [Cloud Page Apps](/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/sfmc-cloud-page-apps.mdx) or [custom processing backends](docs/salesforce/marketing-cloud-engagement/config/code-resource.mdx)) but it can also lead to huge performance issues that impact your Salesforce Marketing Cloud and a whole stack (like, for example, triggering hundreds of Filter Activities at the same time - please don’t do it).
 
 Salesforce protects clients and themselves using two methods:
 
@@ -134,7 +134,7 @@ For example, if a customer has an App installed - send a push message instead of
 
 ##### Code Resources
 
-If you are using Cloud Pages for form handling or redirects - switch to [Code Resources](./sfmc-code-resource.mdx). They have the same support for AMPScript and SSJS but - unlike Cloud Pages - doesn’t cost any Super Messages when opened. You won’t be able to replace the client-facing pages with them, but they are perfect for running the logic - for free. I covered more about that pattern in my [Web Studio Architecture webinar](../webinars/sfmc-webinar-architecting-web-solutions.mdx).
+If you are using Cloud Pages for form handling or redirects - switch to [Code Resources](/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-architecting-web-solutions.mdx).
 
 ##### OOTB Feature Scrutiny
 
@@ -156,7 +156,7 @@ Contact in Marketing Cloud is very broad term covering all records that are bill
 
 1. Records engaged through any SFMC channel (Email Studio, MobileConnect, MobilePush, GroupConnect) - including sends from Journey Builder, Automation Studio or API triggered sends.
 2. Records synchronized through Marketing Cloud Connect from Contact, Lead or User Object.
-3. Records injected into a Journey (for example, from [Salesforce Data Entry](../webinars/sfmc-webinar-salesforce-data-in-journey-builder.mdx#video)).
+3. Records injected into a Journey (for example, from [Salesforce Data Entry](/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-salesforce-data-in-journey-builder.mdx#video)).
 4. Records manually imported to All Contacts list (either directly or inidrectly through, for example, import to All Subscribers).
 
 All those groups are summed up from all Business Units and all [Populations (legacy feature)](https://help.salesforce.com/s/articleView?id=sf.mc_cab_create_a_population.htm&type=5).
@@ -171,8 +171,8 @@ Unfortuntaly, there is no way to get a Contact Count per Business Unit. It is be
 
 There are two, imperfect, workarounds:
 
-1. Whenever you import record to Marketing Cloud through any source, add Business Unit information to a custom Profile Attribute so that you can later retrieve it from [_EnterpriseAttribute Data View](./sfmc-system-data-views.mdx#_enterpriseattribute). Of course, it is easier said than done, as not all Contact sources will make this addition easy. However, if you mostly use [Synchronized Data Extensions in Multi-Org setup](./sfmc-mcc-integration-patterns.mdx) you should be able to leverage Automation Studio for that enrichment - just keep in mind the edge case of Contact injections coming from [Salesforce Data Entry in Journey Builder](../webinars/sfmc-webinar-salesforce-data-in-journey-builder.mdx).
-2. Another option - working even for past data - is to match Contacts against [_Job](./sfmc-system-data-views.mdx#_job) or [_BusinessUnitUnsubscribes](./sfmc-system-data-views.mdx#_businessunitunsubscribes) Data Views that are Business Unit specific. Unfortunately it will work only for small subset of records that were sent an email within the last 6 months (in case of job). You may also try leveraging the [Send Logs](./sfmc-enhanced-send-log.mdx) if you configured them to be Business Unit Specific. However, it’s still a very limited match if you are using multichannel communication.
+1. Whenever you import record to Marketing Cloud through any source, add Business Unit information to a custom Profile Attribute so that you can later retrieve it from [_EnterpriseAttribute Data View](/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-salesforce-data-in-journey-builder.mdx).
+2. Another option - working even for past data - is to match Contacts against [_Job](docs/salesforce/marketing-cloud-engagement/config/system-data-views.mdx#_job) or [_BusinessUnitUnsubscribes](docs/salesforce/marketing-cloud-engagement/config/system-data-views.mdx#_businessunitunsubscribes) Data Views that are Business Unit specific. Unfortunately it will work only for small subset of records that were sent an email within the last 6 months (in case of job). You may also try leveraging the [Send Logs](docs/salesforce/marketing-cloud-engagement/config/enhanced-send-log.mdx) if you configured them to be Business Unit Specific. However, it’s still a very limited match if you are using multichannel communication.
 
 :::
 
@@ -212,7 +212,7 @@ single checkbox
 
 ##### Contact Data Retention
 
-<Button link='./sfmc-contact-deletion.mdx'
+<Button link='docs/salesforce/marketing-cloud-engagement/config/contact-deletion.mdx'
  text='SFMC Contact Deletion Guide'
  newTab='true'
 />
