--- a/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-account-architecture.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-account-architecture.mdx
@@ -37,7 +37,7 @@ While one SF Org can have only one integration to a single Marketing Cloud Accou
 2. The [shared Synchronized Objects configuration per SF Org](https://youtu.be/dRxcbwIA1K0?t=2037) is applied to SF Integration User. It enables you to set distinct configurations per each SF Integration User (shared across Business Units connected using the same User).
 3. While you still cannot control the [Synchronized DEs visibility](https://youtu.be/dRxcbwIA1K0?t=2173) of SFMC Users, you can control which Objects and Records are being synchronized to each Business Unit by applying appropriate Permissions to each SF Integration User. It enables use cases like syncing different Contact Record Types to each Business Unit.
 
-Using the above approach requires additional User licences on the SF CRM side and adds complexity to your implementation. However, it can significantly expand possible use cases in Multi-Org configurations. Full details in the [Marketing Cloud Connect Integration Patterns deep dive](../config/sfmc-mcc-integration-patterns.mdx).
+Using the above approach requires additional User licences on the SF CRM side and adds complexity to your implementation. However, it can significantly expand possible use cases in Multi-Org configurations. Full details in the [Marketing Cloud Connect Integration Patterns deep dive](/docs/salesforce/marketing-cloud-engagement/config/mcc-integration-patterns.mdx).
 
 :::
 
@@ -46,4 +46,4 @@ Using the above approach requires additional User licences on the SF CRM side an
 28 January 2023 | Salesforce Marketing Cloud Infrastructure Setup -  Org Setup
 -- | --
 Recording | [YouTube](https://www.youtube.com/watch?v=dRxcbwIA1K0&list=PLOWi4YJyd0lTtKyr72NHpOawIsoGjbuwr&index=6)
-Articles | [SFMC MCC Integration Patterns](../config/sfmc-mcc-integration-patterns.mdx) <br/> Salesforce Architects blog on [Business Units](https://medium.com/salesforce-architects/adopting-business-units-in-marketing-cloud-98eac8eda216) and [Marketing Cloud Connect](https://medium.com/salesforce-architects/implementing-marketing-cloud-with-multiple-salesforce-orgs-part-1-cf8637cf0985)<br/>Salesforce Documentation on [Multi-Org Considerations](https://help.salesforce.com/s/articleView?id=sf.mc_co_faqs_for_multi_org.htm)
+Articles | [SFMC MCC Integration Patterns](/docs/salesforce/marketing-cloud-engagement/config/mcc-integration-patterns.mdx) <br/> Salesforce Architects blog on [Business Units](https://medium.com/salesforce-architects/adopting-business-units-in-marketing-cloud-98eac8eda216) and [Marketing Cloud Connect](https://medium.com/salesforce-architects/implementing-marketing-cloud-with-multiple-salesforce-orgs-part-1-cf8637cf0985)<br/>Salesforce Documentation on [Multi-Org Considerations](https://help.salesforce.com/s/articleView?id=sf.mc_co_faqs_for_multi_org.htm)
