--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-case.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-case.mdx
@@ -34,7 +34,7 @@ SELECT
 
 You can have as many `WHEN`/`THEN` conditions as you want. Also, the `ELSE` statement is optional but a good idea to catch unexpected values.
 
-Feel free also to leverage [aliases](./sfmc-sql-select.mdx#aliasing-with-as) to manipulate the column name at the same time:
+Feel free also to leverage [aliases](/docs/salesforce/marketing-cloud-engagement/sql/sql-select.mdx#aliasing-with-as) to manipulate the column name at the same time:
 
 ```sql {14}
 SELECT
@@ -125,7 +125,7 @@ SELECT
 
 ### LIKE in CASE
 
-[`LIKE`](./sfmc-sql-like.mdx) is not only valuable for the [`WHERE` Statement](./sfmc-sql-where.mdx#like-operator). It is also an incredible tool empowering the `CASE` statement. It allows you to build flexible conditions on free text values:
+[`LIKE`](/docs/salesforce/marketing-cloud-engagement/sql/sql-like.mdx) is not only valuable for the [`WHERE` Statement](/docs/salesforce/marketing-cloud-engagement/sql/sql-where.mdx#like-operator). It is also an incredible tool empowering the `CASE` statement. It allows you to build flexible conditions on free text values:
 
 ```sql {4} title="Great way to split your database between Internal and External users for different communication"
 SELECT
@@ -136,7 +136,7 @@ SELECT
       END AS ContactType
 ```
 
-In the `SELECT` statement, the `LIKE` operator is handy for fixing data coming from the free text fields. To learn more about the possibilities, check out the [`LIKE` guide](./sfmc-sql-like.mdx).
+In the `SELECT` statement, the `LIKE` operator is handy for fixing data coming from the free text fields. To learn more about the possibilities, check out the [`LIKE` guide](/docs/salesforce/marketing-cloud-engagement/sql/sql-like.mdx).
 
 ### IIF Shorthand
 
@@ -188,4 +188,4 @@ Now, even with just three columns in your Entry Point, you can create a Journey 
 
 ## CASE in WHERE
 
-The `CASE` statement is not only useful in a [`SELECT`](./sfmc-sql-select.mdx) part of the query. You can use it also within the [`WHERE` to apply conditional filtering](./sfmc-sql-where.mdx#case-operator).
+The `CASE` statement is not only useful in a [`SELECT`](/docs/salesforce/marketing-cloud-engagement/sql/sql-select.mdx) part of the query. You can use it also within the [`WHERE` to apply conditional filtering](/docs/salesforce/marketing-cloud-engagement/sql/sql-where.mdx#case-operator).
