--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-from.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-from.mdx
@@ -13,7 +13,7 @@ import { LeadText } from '/src/components/LeadText.js';
 
 ## Basic FROM
 
-The [`SELECT`](./sfmc-sql-select.mdx) statement alone won't do much. In most cases, once you have selected data you want to work with, you also need to pick the table (Data Extension or System Data View) `FROM` which the query will take the required columns. The code for this is simple:
+The [`SELECT`](/docs/salesforce/marketing-cloud-engagement/sql/sql-select.mdx) statement alone won't do much. In most cases, once you have selected data you want to work with, you also need to pick the table (Data Extension or System Data View) `FROM` which the query will take the required columns. The code for this is simple:
 
 ```sql {4} title="Get ContactKey and EmailAddress from Data Extension named MasterSubscriberDE"
 SELECT
@@ -35,7 +35,7 @@ There are, however, two cases specific to Salesforce Marketing Cloud that adds a
 
 ## System Data Views
 
-Salesforce Marketing Cloud is partially hiding the [System Data Views](../config/sfmc-system-data-views.mdx) Data Extensions that store tracking data. Think about Email Sent history, Opens and Clicks, Bounces and Complaints. You can find there the tracking data for SMS and Social channels. Also, more technical data points, like Jobs and Enterprise Attributes, are available in the System Data Views. You won't find them in the User Interface but can query them with the SQL. The difference related to those tables is in naming convention. When querying them, you must leverage `_` prefix:
+Salesforce Marketing Cloud is partially hiding the [System Data Views](/docs/salesforce/marketing-cloud-engagement/config/system-data-views.mdx) Data Extensions that store tracking data. Think about Email Sent history, Opens and Clicks, Bounces and Complaints. You can find there the tracking data for SMS and Social channels. Also, more technical data points, like Jobs and Enterprise Attributes, are available in the System Data Views. You won't find them in the User Interface but can query them with the SQL. The difference related to those tables is in naming convention. When querying them, you must leverage `_` prefix:
 
 ```sql {8}
 SELECT
