--- a/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/sfmc-cloud-page-apps.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/sfmc-cloud-page-apps.mdx
@@ -32,7 +32,7 @@ Marketing Cloud micro application offers AppExchange-style deep integration with
 
 The good? You can use Marketing Cloud programmatic languages (SSJS and AMPScript) with all their nifty built-in functions to control the assets and behaviours of the SFMC platform and connected Sales & Service Clouds. You can also leverage the APIs to gather even more power and pull external logic and data. All this without having to care about hosting, scaling and integration. Available directly from the Marketing Cloud menu. And cost? Just a super message for loading a Cloud Page.
 
-The bad? It is suitable for relatively simple apps. Think about a single front-end page powered by an SSJS or AMPScript backend on a [Code Resource](../../config/sfmc-code-resource.mdx). Of course, you can try to build something more complex, but you may quickly get into a place where the whole endeavour would have been easier with an outside-hosted application.
+The bad? It is suitable for relatively simple apps. Think about a single front-end page powered by an SSJS or AMPScript backend on a [Code Resource](/docs/salesforce/marketing-cloud-engagement/config/code-resource.mdx). Of course, you can try to build something more complex, but you may quickly get into a place where the whole endeavour would have been easier with an outside-hosted application.
 
 ## Build your dream
 
@@ -586,8 +586,8 @@ There was much information to digest, so it's time for a streamlined step by ste
 
 Looking for more? Check out follow up materials for added context and deeper dive:
 
-1. Webinar recording on [Cloud Page Apps](../../webinars/sfmc-webinar-cloud-page-apps.mdx).
-2. Webinar recording on [Architecting Web Solutions in SFMC](../../webinars/sfmc-webinar-architecting-web-solutions.mdx).
-3. Article on [Power of SFMC Code Resources](../../config/sfmc-code-resource.mdx).
-4. Article on [SFMC AppExchange Solutions](../../config/sfmc-appexchange-solutions.mdx).
+1. Webinar recording on [Cloud Page Apps](/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-cloud-page-apps.mdx).
+2. Webinar recording on [Architecting Web Solutions in SFMC](/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-architecting-web-solutions.mdx).
+3. Article on [Power of SFMC Code Resources](/docs/salesforce/marketing-cloud-engagement/config/code-resource.mdx).
+4. Article on [SFMC AppExchange Solutions](/docs/salesforce/marketing-cloud-engagement/config/appexchange-solutions.mdx).
 5. Code Snippets on [my GitHub](https://github.com/MateuszDabrowski/sfmc-cloud-page-app-template).
