--- a/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/ssjs-mobileconnect-phone-change.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/ssjs-mobileconnect-phone-change.mdx
@@ -15,17 +15,17 @@ import { LeadText } from '/src/components/LeadText.js';
 
 There is a lot to like about the Salesforce Marketing Cloud Mobile Connect, but Contact management is not the one.
 
-One of the problems is managing the Mobile Phone Number. It is a crucial data point because we are using it to send the SMS and because it is the key value for many of the [MobileConnect Data Views](../../config/sfmc-mobile-connect-data-views.mdx#mobileconnect-data-views).
+One of the problems is managing the Mobile Phone Number. It is a crucial data point because we are using it to send the SMS and because it is the key value for many of the [MobileConnect Data Views](/docs/salesforce/marketing-cloud-engagement/config/mobile-connect-data-views.mdx#mobileconnect-data-views).
 
 There are many scenarios when we might want to update the user's Mobile Number. Be it wrong data in the initial load or client's request to change the number.
 
-The official approach is to import the contact with the new Mobile Number. It, however, won't overwrite the previous phone. It will merely add a new one to the record with higher [priority](../../config/sfmc-mobile-connect-data-views.mdx#_mobileaddress). Not perfect.
+The official approach is to import the contact with the new Mobile Number. It, however, won't overwrite the previous phone. It will merely add a new one to the record with higher [priority](/docs/salesforce/marketing-cloud-engagement/config/mobile-connect-data-views.mdx#_mobileaddress). Not perfect.
 
-So what you can do? Leverage the [`_MobileAddress` Data View](../../config/sfmc-mobile-connect-data-views.mdx#_mobileaddress) along with simple SSJS snippet and force Marketing Cloud to do what you want it to do.
+So what you can do? Leverage the [`_MobileAddress` Data View](/docs/salesforce/marketing-cloud-engagement/config/mobile-connect-data-views.mdx#_mobileaddress) along with simple SSJS snippet and force Marketing Cloud to do what you want it to do.
 
 :::note You Should Know
 
-The solution shown below is working perfectly fine right now. However, remember that Salesforce considers [`_MobileAddress` Data View](../../config/sfmc-mobile-connect-data-views.mdx#_mobileaddress) as legacy and unsupported, so be sure to make the first run on test data to check whether it is still working correctly.
+The solution shown below is working perfectly fine right now. However, remember that Salesforce considers [`_MobileAddress` Data View](/docs/salesforce/marketing-cloud-engagement/config/mobile-connect-data-views.mdx#_mobileaddress) as legacy and unsupported, so be sure to make the first run on test data to check whether it is still working correctly.
 
 Considering how intertwined this Data View still is with MobileConnect, I don't expect changes anytime soon.
 
@@ -33,7 +33,7 @@ Considering how intertwined this Data View still is with MobileConnect, I don't 
 
 ## Solution
 
-[`_MobileAddress` Data View](../../config/sfmc-mobile-connect-data-views.mdx#_mobileaddress) is unique, as it can be modified using SSJS - this is not the case with most other Data Views. We can make use of this by using [`Rows.Update`](https://developer.salesforce.com/docs/atlas.en-us.noversion.mc-programmatic-content.meta/mc-programmatic-content/ssjs_dataExtensionRowsUpdate.htm) function.
+[`_MobileAddress` Data View](/docs/salesforce/marketing-cloud-engagement/config/mobile-connect-data-views.mdx#_mobileaddress) is unique, as it can be modified using SSJS - this is not the case with most other Data Views. We can make use of this by using [`Rows.Update`](https://developer.salesforce.com/docs/atlas.en-us.noversion.mc-programmatic-content.meta/mc-programmatic-content/ssjs_dataExtensionRowsUpdate.htm) function.
 
 We will need:
 - Contact ID - you can check it by going to MobileConnect » Manage Contacts » clicking a Contact Key » Attributes tab. It will be in the first table.
@@ -50,7 +50,7 @@ With that two information, [`Init`](https://developer.salesforce.com/docs/atlas.
 </script>
 ```
 
-That's it. Running this snippet - even in a Cloud Page or [Code Resource](../../config/sfmc-code-resource.mdx) - will change the Mobile Number assigned to the Contact. Just be sure to publish the page and load it. The Web Studio Preview won't work.
+That's it. Running this snippet - even in a Cloud Page or [Code Resource](/docs/salesforce/marketing-cloud-engagement/config/code-resource.mdx) - will change the Mobile Number assigned to the Contact. Just be sure to publish the page and load it. The Web Studio Preview won't work.
 
 :::note You Should Know
 
@@ -70,7 +70,7 @@ You can adapt the above script to better suit your needs.
 
 ### Change or Merge Contact ID
 
-You are not limited to Mobile Number change in MobileConnect with this solution. You can leverage [`_MobileAddress` Data View](../../config/sfmc-mobile-connect-data-views.mdx#_mobileaddress) to even merge MobileConnect contacts.
+You are not limited to Mobile Number change in MobileConnect with this solution. You can leverage [`_MobileAddress` Data View](/docs/salesforce/marketing-cloud-engagement/config/mobile-connect-data-views.mdx#_mobileaddress) to even merge MobileConnect contacts.
 
 Use cases?
 - You might have two contacts with different phone numbers that you have identified to be the same person (one tied to personal and second to work number). To optimize the contact count, you can make a merge.
@@ -112,6 +112,6 @@ You can also leverage the snippet within an Automation Studio using Data Extensi
 
 :::note You Should Know
 
-Technically you can use this solution to modify any field of [`_MobileAddress`](../../config/sfmc-mobile-connect-data-views.mdx#_mobileaddress). Due to the unsupported status of this Data View, I would recommend using Contact Builder whenever it is enough for your use case. It allows you to change everything but the Mobile Number and Contact ID.
+Technically you can use this solution to modify any field of [`_MobileAddress`](/docs/salesforce/marketing-cloud-engagement/config/mobile-connect-data-views.mdx#_mobileaddress). Due to the unsupported status of this Data View, I would recommend using Contact Builder whenever it is enough for your use case. It allows you to change everything but the Mobile Number and Contact ID.
 
 :::
