--- a/docs/salesforce/marketing-cloud-personalization/snippets/catalog-etl-metadata-viewer.mdx
+++ b/docs/salesforce/marketing-cloud-personalization/snippets/catalog-etl-metadata-viewer.mdx
@@ -14,7 +14,7 @@ import { Button } from '/src/components/Buttons.js';
 
 ## Problem with debugging Catalog data
 
-Marketing Cloud Personalization (Interaction Studio) can pull [product, content and related catalog data](../mcp-catalog-architecture.mdx) from multiple sources and does it continuously. That's perfect when all works great, but debugging features are minimal once you see some data discrepancies.
+Marketing Cloud Personalization (Interaction Studio) can pull [product, content and related catalog data](/docs/salesforce/marketing-cloud-personalization/catalog-architecture.mdx) from multiple sources and does it continuously. That's perfect when all works great, but debugging features are minimal once you see some data discrepancies.
 
 Sure, SFTP stores processed CSV Feed files, but finding the culprit takes work, especially if you push frequently with delta files.
 
@@ -48,7 +48,7 @@ A Serverside Template that leverages built-in Simulated Payload Preview availabl
 
 This approach leverages native features of the platform to access unsurfaced data in a techy but easily transferable format.
 
-Additionally, it's a great way to showcase some [MCP Serverside Code](../mcp-serverside-code-basics.mdx) approaches that can be useful for building standard campaign templates.
+Additionally, it's a great way to showcase some [MCP Serverside Code](/docs/salesforce/marketing-cloud-personalization/serverside-code-basics.mdx) approaches that can be useful for building standard campaign templates.
 
 ### Implementation Guide
 
@@ -144,7 +144,7 @@ Optionally, you can modify the scope of returned data in the left Configuration 
 
 ## Limitations
 
-While this solution can benefit [MCP Catalog Object](../mcp-catalog-architecture.mdx) debugging, there are a few significant limitations.
+While this solution can benefit [MCP Catalog Object](/docs/salesforce/marketing-cloud-personalization/catalog-architecture.mdx) debugging, there are a few significant limitations.
 
 ### Data scope
 
@@ -167,7 +167,7 @@ It is awful, but hopefully, only a few manual changes are happening in the produ
 
 ### Context.event.fields.item
 
-While `context.event.fields.item` is perfect for the use case described here, don't try to use it in standard Campaigns. Unfortunately, it is filled in only in the Simulation Preview and will not be available when deployed to a website. However, for production purposes you can use [`context.event` methods](../mcp-serverside-code-context.mdx#event-methods) to get the same information dynamically from the item viewed by user.
+While `context.event.fields.item` is perfect for the use case described here, don't try to use it in standard Campaigns. Unfortunately, it is filled in only in the Simulation Preview and will not be available when deployed to a website. However, for production purposes you can use [`context.event` methods](/docs/salesforce/marketing-cloud-personalization/serverside-code-context.mdx#event-methods) to get the same information dynamically from the item viewed by user.
 
 ## Options
 
